--- a/src/main/resources/templates/product/editForm.html
+++ b/src/main/resources/templates/product/editForm.html
@@ -15,12 +15,30 @@
 <body>
 <div class="product">
   <h1>상품 수정</h1>
-  <form method="post" action="" >
+  <form id="updateForm" th:action th:method="post" th:object="${form}">
+    <div th:if="${#fields.hasGlobalErrors()}">-->
+      <p class="fieldError" th:each="err:${#fields.globalErrors()}" th:text="${err}"></p>
+    </div>
     <div>
-      <div><label for="">상품아이디</label><input type="text" readonly name="pid" th:value="${editForm.pid}"></div>
-      <div><label for="">상품명</label><input type="text" name="pname" th:value="${editForm.pname}"></div>
-      <div><label for="">수량</label><input type="text" name="count" th:value="${editForm.count}"></div>
-      <div><label for="">가격</label><input type="text" name="price" th:value="${editForm.price}"></div>
+      <div>
+        <label th:for="pid">상품아이디</label>
+        <input type="text" readonly th:field="*{pid}" disabled>
+      </div>
+      <div>
+        <label th:for="pname">상품명</label>
+        <input type="text" name="pname" th:field="*{pname}">
+        <div class="fieldError" th:errors="*{pname}"></div>
+      </div>
+      <div>
+        <label th:for="count">수량</label>
+        <input type="text" name="count" th:field="*{count}">
+        <div class="fieldError" th:errors="*{count}"></div>
+      </div>
+      <div>
+        <label th:for="price">가격</label>
+        <input type="text" name="price" th:field="*{price}">
+        <div class="fieldError" th:errors="*{price}"></div>
+      </div>
       <div>
         <button id="cancelBtn" type="button">취소</button>
         <button id="editBtn">저장</button>
