--- a/src/main/resources/templates/product/editForm.html
+++ b/src/main/resources/templates/product/editForm.html
@@ -22,7 +22,7 @@
     <div>
       <div>
         <label th:for="pid">상품아이디</label>
-        <input type="text" readonly th:field="*{pid}" disabled>
+        <input type="text" readonly th:field="*{pid}" readonly>
       </div>
       <div>
         <label th:for="pname">상품명</label>
